<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.example.valeria.demoparse.LoginActivity">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="#FF5CAAE6"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        android:minHeight="?attr/actionBarSize" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:hint="@string/hintNombre"
        android:ems="10"
        android:id="@+id/userLogin"
        android:layout_marginTop="100dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:hint="@string/hintPassword"
        android:id="@+id/passwordLogin"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/userLogin" />

    <Button
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:text="@string/botonLogin"
        android:id="@+id/login"
        android:layout_below="@+id/passwordLogin"
        android:layout_centerHorizontal="true" />

    <TextView android:text="@string/cuenta" android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/texto"
        android:layout_below="@+id/login"
        android:layout_centerHorizontal="true"/>

    <Button
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:text="@string/botonSignup"
        android:id="@+id/signup"
        android:layout_below="@+id/texto"
        android:width="50dp"
        android:layout_centerHorizontal="true" />

</RelativeLayout>
